Fixed loading data for the collection list page [#2273]